--- a/config/confd/templates/settings.php.tmpl
+++ b/config/confd/templates/settings.php.tmpl
@@ -7,5 +7,7 @@ $dbPassword     = '{{ getenv "GD_DB_PASSWORD" }}' ;
 $dbTablePrefix  = '{{ getenv "GD_DB_TABLE_PREFIX" }}' ;
 $encryptionSalt = '{{ getenv "GD_ENCRYPTION_SALT" }}' ;
 $apiEnabled     = {{ getenv "GD_API_ENABLED" }} ;
+$maxGeneratedRows = {{ getenv "GD_MAX_GENERATED_ROWS" }} ;
+$defaultNumRows = {{ getenv "GD_DEFAULT_NUM_ROWS" }} ;
 
 ?>
